--- a/Batch_GUI/converter.properties
+++ b/Batch_GUI/converter.properties
@@ -1,5 +1,5 @@
 
-#Format: (WIN | MAC) = <Befehl>;<Befehl>;...
+#Format: (WIN | MAC) = <Command>;<Command>;...
 #<Command> ::= <Path-to-tool> <Options>, <Output-modifier>, <File-extension> 
 
 #Example Windows:
